[gd_scene load_steps=14 format=3 uid="uid://n7b2k27y8jsw"]

[ext_resource type="Script" uid="uid://cjoearrc2li6m" path="res://Scripts/test_enemy.gd" id="1_bs22l"]
[ext_resource type="Texture2D" uid="uid://bl1ajevycm84m" path="res://Assets/Test/Dummy/Idle/Idle(NoArmor).png" id="1_r1vdb"]
[ext_resource type="Texture2D" uid="uid://db2fup3hpwes2" path="res://Assets/Test/Dummy/Hited/Hited(NoArmor)1.png" id="3_ymh8f"]
[ext_resource type="Texture2D" uid="uid://cae62faycwvkx" path="res://Assets/Test/Dummy/Hited/Hited(NoArmor)2.png" id="4_cvapq"]
[ext_resource type="Texture2D" uid="uid://c35ffe415s2q0" path="res://Assets/Test/Dummy/Hited/Hited(NoArmor)3.png" id="5_ngp1l"]
[ext_resource type="Texture2D" uid="uid://wf7y1qte7poy" path="res://Assets/Test/Dummy/Hited/Hited(NoArmor)4.png" id="6_ag7nl"]
[ext_resource type="Texture2D" uid="uid://6ryfgc642sek" path="res://Assets/Test/Dummy/Hited/Hited(NoArmor)5.png" id="7_yojx0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r1vdb"]
size = Vector2(20, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymh8f"]
atlas = ExtResource("1_r1vdb")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kygu"]
atlas = ExtResource("3_ymh8f")
region = Rect2(0, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_0hxvo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymh8f")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kygu")
}, {
"duration": 1.0,
"texture": ExtResource("4_cvapq")
}, {
"duration": 1.0,
"texture": ExtResource("5_ngp1l")
}, {
"duration": 1.0,
"texture": ExtResource("6_ag7nl")
}, {
"duration": 1.0,
"texture": ExtResource("7_yojx0")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bs22l"]
size = Vector2(20, 35)

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_ymh8f"]
length = 30.0

[node name="TestEnemy" type="CharacterBody2D" node_paths=PackedStringArray("AttackZone")]
scale = Vector2(2, 2)
script = ExtResource("1_bs22l")
AttackZone = NodePath("AttackZone")

[node name="FloorDetection" type="CollisionShape2D" parent="."]
position = Vector2(-1, -2)
shape = SubResource("RectangleShape2D_r1vdb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-2.5, -24)
sprite_frames = SubResource("SpriteFrames_0hxvo")
animation = &"Idle"
autoplay = "Idle"

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(-1, -18)
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_bs22l")
debug_color = Color(0.604492, 0.54154, 0, 0.42)

[node name="AttackZone" type="Area2D" parent="."]
position = Vector2(-1.5, -15.5)
collision_layer = 64
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
rotation = 1.5708
shape = SubResource("SeparationRayShape2D_ymh8f")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
